--- a/style.css
+++ b/style.css
@@ -145,6 +145,23 @@ body
 	border-radius : 10px;
 }
 
+#deletetask
+{
+	position : relative;
+	top : 88px;
+	width : 500px;
+	border : 1px #FF0000 solid;
+	background-color : #FF0000;
+	padding : 5px;
+	margin-bottom : 5px;
+	text-align : center;
+	font-weight : bold;
+	color : #000000;
+	-webkit-border-radius : 10px;
+	-moz-border-radius : 10px;
+	border-radius : 10px;
+}
+
 #finalDest
 {
 	border : 1px solid;
