--- a/style.css
+++ b/style.css
@@ -145,6 +145,24 @@ body
 	border-radius : 10px;
 }
 
+#modiftask
+{
+	position : relative;
+	top : 88px;
+	width : 500px;
+	border : 1px #FF0000 solid;
+	background-color : #FF0000;
+	padding : 5px;
+	margin-bottom : 5px;
+	text-align : center;
+	font-weight : bold;
+	color : #000000;
+	cursor : pointer;
+	-webkit-border-radius : 10px;
+	-moz-border-radius : 10px;
+	border-radius : 10px;
+}
+
 #deletetask
 {
 	position : relative;
@@ -157,6 +175,7 @@ body
 	text-align : center;
 	font-weight : bold;
 	color : #000000;
+	cursor : pointer;
 	-webkit-border-radius : 10px;
 	-moz-border-radius : 10px;
 	border-radius : 10px;
@@ -171,6 +190,13 @@ body
 	-webkit-border-radius : 10px;
 	-moz-border-radius : 10px;
 	border-radius : 10px;
+}
+
+#usertable tr
+{
+	-webkit-border-radius : 40px 10px;
+	-moz-border-radius : 40px 10px;
+	border-radius : 40px 10px;
 }
 
 /* Classes */
