--- a/style.css
+++ b/style.css
@@ -199,7 +199,68 @@ body
 	border-radius : 40px 10px;
 }
 
+#preferenceslisttask
+{
+	width : 1100px;
+	height : 200px;
+	border : 4px #0066D0 solid;
+	padding : 10px;
+	-webkit-border-radius : 20px;
+	-moz-border-radius : 20px;
+	border-radius : 20px;
+}
+
+#searchbtn
+{
+	width : 90px;
+	border : 2px #0066D0 solid;
+	font-weight : bold;
+	color : #0066D0;
+	padding : 10px;
+	-webkit-border-radius : 20px;
+	-moz-border-radius : 20px;
+	border-radius : 20px;
+}
+
 /* Classes */
+
+.toollisttask
+{
+	display : table;
+	float : left;
+}
+
+.activetab
+{
+	display : table;
+	float : left;
+	padding : 6px;
+	color : #FFFFFF;
+	background-color : #0066D0;
+	border : 2px #0066D0 solid;
+	border-bottom : 0px;
+	-webkit-border-radius : 10px;
+	-moz-border-radius : 10px;
+	border-radius : 10px;
+}
+
+.tab
+{
+	display : table;
+	float : left;
+	padding : 6px;
+	background-color : #FFFFFF;
+	border : 2px #0066D0 solid;
+	border-bottom : 0px;
+	-webkit-border-radius : 10px;
+	-moz-border-radius : 10px;
+	border-radius : 10px;
+}
+
+.tab:hover
+{
+	cursor : pointer;
+}
 
 .ui-tooltip 
 {
@@ -251,7 +312,6 @@ body
 	display: table;  
 	position : relative;
 	float : left;
-	width : 80%;
 	border : 1px #AFCBE7 solid;
 	background-color : #AFCBE7;
 	padding : 5px;
@@ -266,7 +326,6 @@ body
 	display: table; 
 	position : relative;
 	float : left;
-	width : 80%;	
 	border : 1px #AFCBE7 solid;
 	background-color : #FFFFFF;
 	padding : 5px;
@@ -281,7 +340,6 @@ body
 	display: table; 
 	position : relative;
 	float : left;
-	width : 80%;	
 	border : 1px #AFCBE7 solid;
 	background-color : #FFFFFF;
 	padding : 5px;
